--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.8.0/styles/github.min.css">
     <style>
         .chat-container {
-            height: calc(100vh - 280px);
+            max-width: 100%;
+            height: calc(100vh - 120px);
+            margin: 0 auto;
+            padding: 1rem;
             overflow-y: auto;
+            background-color: #f5f5f5;
         }
         .user-message {
             background-color: #EBF8FF;
@@ -101,43 +105,43 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            padding: 1.5rem 1rem;
-            max-width: 1024px;
-            margin: 0 auto;
+            padding: 0.5rem;
+            max-width: 100%;
+            margin: 0;
         }
         .input-container {
-            margin-top: auto;
-            padding: 1rem;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 1rem;
-            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
-            backdrop-filter: blur(10px);
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 0.5rem;
+            background: white;
+            border-top: 1px solid #e2e8f0;
+            margin: 0;
+            border-radius: 0;
         }
         body {
             background: linear-gradient(135deg, #f6f8fc 0%, #f0f4f8 100%);
         }
         .title-container {
             text-align: center;
-            margin-bottom: 2rem;
-            animation: fadeIn 0.8s ease-out;
+            margin-bottom: 0.5rem;
+            padding: 0.5rem;
         }
         .title-container h1 {
-            font-size: 2.5rem;
-            color: #1a365d;
-            margin-bottom: 0.5rem;
-            letter-spacing: -0.5px;
+            font-size: 1.5rem;
+            margin-bottom: 0.25rem;
         }
         .title-container p {
-            color: #4a5568;
-            font-size: 1.1rem;
+            font-size: 0.9rem;
         }
         .chat-container {
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 1rem;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-            border: 1px solid rgba(226, 232, 240, 0.8);
-            backdrop-filter: blur(10px);
-            transition: box-shadow 0.3s ease;
+            flex: 1;
+            margin-bottom: 60px;
+            padding: 0.5rem;
+            border-radius: 0;
+            box-shadow: none;
+            border: none;
         }
         .user-message {
             background-color: #f8fafc;
@@ -152,9 +156,9 @@
             transition: transform 0.2s ease;
         }
         .avatar {
-            width: 2.5rem;
-            height: 2.5rem;
-            border-radius: 1rem;
+            width: 2rem;
+            height: 2rem;
+            border-radius: 0.5rem;
             background: linear-gradient(135deg, #e2e8f0 0%, #cbd5e0 100%);
             display: flex;
             align-items: center;
@@ -162,21 +166,22 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         }
         #user-input {
-            border-radius: 0.75rem;
+            padding: 0.5rem;
+            max-height: 100px;
+            border-radius: 0.5rem;
             border: 2px solid #e2e8f0;
             transition: all 0.3s ease;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
             font-size: 1rem;
-            padding: 0.75rem 1rem;
         }
         #user-input:focus {
             border-color: #3b82f6;
             box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
         }
         #send-button {
+            padding: 0.5rem;
+            border-radius: 0.5rem;
             background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
-            border-radius: 0.75rem;
-            padding: 0.75rem 1.5rem;
             transition: all 0.3s ease;
             box-shadow: 0 2px 4px rgba(37, 99, 235, 0.2);
         }
@@ -224,6 +229,22 @@
         .assistant-message .avatar {
             background: linear-gradient(135deg, #9F7AEA 0%, #805AD5 100%);
             color: white;
+        }
+        .message-input-container {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 1rem;
+            background-color: white;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .message-bubble {
+            max-width: 85%;
+            padding: 0.5rem;
+            margin: 0.25rem 0;
+            border-radius: 1rem;
+            word-wrap: break-word;
         }
     </style>
 </head>
